# bin_disp

./: .gitignore  README.md  d-center-main.py  link.md
BuShu/: build_and_run.sh
BuShu/csrc/: de_disp.cpp  function.h  pytorch_npu_helper.hpp  registration.cpp
BuShu/custom_ops/: __init__.py
BuShu/custom_ops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BuShu/test/: test_de_disp.py
Disp/op_host/: de_disp.cpp  de_disp_tiling.h
Disp/op_kernel/: de_disp.cpp  de_disp0.cpp
Disp_gc/: README.md
Disp_gc/inc/: common.h  op_runner.h  operator_desc.h
Disp_gc/output/: execute_disp_op
Disp_gc/scripts/: gen_data.py  verify_result.py
Disp_gc/src/: CMakeLists.txt  CMakeLists.txt.bak_wy  CMakeLists.txt_bak_jt_6_4  main.cpp  op_runner.cpp
Disp_st/: DeDisp_case.json
disp_torch_npu/: readme.md  test_disp_v2.py  test_disp_v3.py  test_disp_v4.py  test_disp_v5.py  test_disp_v6.py  test_torch_disp.py
